tests/errors/regexp_invalid_pattern.dang
# Invalid regexp surfaces a compile error at the call site, naming the pattern.
"abc".containsMatch(`(`)
